--- a/html/cars.html
+++ b/html/cars.html
@@ -5,12 +5,11 @@
     <title>驾驶舱—车辆</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/cssPublic.css">
+    <link rel="stylesheet" type="text/css" href="../css/cssPublic.css?3">
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" href="../css/LArea.css">
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
     <link rel="stylesheet" type="text/css" href="../css/cars.css">
-    <link rel="stylesheet" type="text/css" href="../css/slideBar.css">
     <script src="//h5.shouqiev.com/libs/jquery.min.js"></script>
     <script src="../js/common/baseUrl.js"></script>
     <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
@@ -20,69 +19,8 @@
     <script src="../libs/picker.js"></script>
 </head>
 <body>
-    <!--slideBar and slideBg start-->
-    <div class="slideBarBg"></div>
-    <section class="slideBar clearfix">
-        <div class="nickName clearfix">
-            <div class="headIcon fl"></div>
-            <p class="nickName1 fl"></p>
-        </div>
-        <!--超出滚动-待定-->
-        <div class="slideCon">
-            <ul class="slideList">
-                <!--实时监控-->
-                <li class="list showWatching " data-menuId="2" data-value="charts.html">
-                    <span class="iconList"></span>
-                    <div class="type">实时监控</div>
-                </li>
-                <!--城市KPI考核-->
-                <li class="list showKpi" data-menuId="3" data-value="kpis.html">
-                    <span class="iconList iconListKpi"></span>
-                    <div class="type">城市KPI考核</div>
-                </li>
-                <!--用户分析 car-user-->
-                <li class="list showUser" data-menuId="4" data-value="car-user.html">
-                    <span class="iconList iconListUser"></span>
-                    <div class="type">用户分析</div>
-                </li>
-                <!--order-->
-                <li class="list showOrders" data-menuId="5" data-value="orders.html">
-                    <span class="iconList iconListOrder"></span>
-                    <div class="type">订单分析</div>
-                </li>
-                <!--网点分析 site-->
-                <li class="list showSite" data-menuId="6" data-value="site.html">
-                    <span class="iconList iconListSite"></span>
-                    <div class="type">网点分析</div>
-                </li>
-                <!--车辆分析 cars-->
-                <li class="list showCars active" data-menuId="7" data-value="cars.html">
-                    <span class="iconList iconListCars"></span>
-                    <div class="type">车辆分析</div>
-                </li>
-                <!--客服分析 新增 customer-service.html-->
-                <li class="list showCustomer" data-menuId="8" data-value="customer-service.html">
-                    <span class="iconList iconListCustomer"></span>
-                    <div class="type">客服分析</div>
-                </li>
-                <!--运营分析==车资 car-fare-->
-                <li class="list showFare" data-menuId="9" data-value="operation.html">
-                    <span class="iconList iconListFare"></span>
-                    <div class="type">运营分析</div>
-                </li>
-                <!--营收分析 car-operation-->
-                <li class="list showOperation" data-menuId="10" data-value="income.html">
-                    <span class="iconList iconListOperation"></span>
-                    <div class="type">营收分析</div>
-                </li>
-            </ul>
-        </div>
-        <a href="../index.html" class="out">退出登陆</a>
-    </section>
-    <!--slideBar and slideBg end-->
-
     <div class="box">
-        <!--header start -->
+        <!-- 导航栏 -->
         <header class="header clearfix">
             <div class="slideBtn"></div>
             <div class="logo"></div>
@@ -94,9 +32,8 @@
                 <div class="showCityIcon"></div>
             </div>
         </header>
-        <!--header end-->
 
-        <!-- 车辆概况 -->
+        <!-- 车辆概况 car -->
         <section class="section-box" section-id="40">
             <div class="wrap car">
                 <div class="cont-title">车辆概况</div>
@@ -134,7 +71,7 @@
             </div>
         </section>
 
-        <!--堆叠图 上架率-->
+        <!-- 上架率堆叠图 -->
         <section class="section-box" section-id="41">
             <div class="wrap stacks">
                 <div class="cont-title">上架率</div>
@@ -148,8 +85,10 @@
                     结束<input type="text" id="appDateTime5" class="ddp-2" onfocus="this.blur();">
                 </div>
                 <div class="echarts" id="dateCarChart1"></div>
-                <div class="noteList">
-                    <div class="note">平均上架率 <span class="car-notedata"></span> </div>
+                <div class="cont-note">
+                    <div class="noteLine">
+                        <p>平均上架率 <span class="car-notedata"></span> </p>
+                    </div>
                 </div>
                 <div class="responsiblePerson-box">
                     <p class="phoneBubble sjl-phoneBubble"><a href=""></a></p>
@@ -158,94 +97,50 @@
             </div>
         </section>
 
-
-        <!--车机离线-->
-        <section class="cars clearfix">
-            <div class="carDate carCommon clearfix section-box" section-id="42">
-                <img src=".././images/leftbottom.png" alt="" class="leftBotom">
-                <img src=".././images/leftup.png" alt="" class="rightbottom">
-                <div class="date">车机离线图
-                    <div class="content-block first-s" style="display: none">
-                        <div class="trangle"></div>
-                        <input id="first-s" class="lateTime" type="text" readonly="" onfocus="this.blur();" />
-                        <input id="first-sv" type="hidden" />
-                    </div></div>
-                <div class="timeBorder" style="margin-bottom: 0;">
-                    开始<input type="text" id="appDateTime6" class="appDateTime1" onfocus="this.blur();" style="margin-right: 0.7rem;">
-                    结束<input type="text" id="appDateTime7" class="appDateTime1" onfocus="this.blur();">
+        <!-- 车机离线图 offline-chart -->
+        <section class="section-box" section-id='42'>
+            <div class="wrap offline-chart">
+                <div class="cont-title">车机离线图</div>
+                <div class="doubleDatePicker">
+                    开始<input type="text" id="appDateTime6" class="ddp-1" onfocus="this.blur();">
+                    结束<input type="text" id="appDateTime7" class="ddp-2" onfocus="this.blur();">
                 </div>
-                <div id="dateCarChart2"></div>
+                <div class="echarts" id="dateCarChart2"></div>
                 <div class="responsiblePerson-box">
                     <p class="phoneBubble lxt-phoneBubble"><a href=""></a></p>
                     <p class="responsiblePerson"></p>
                 </div>
             </div>
-            <div class="formCommon clearfix section-box" section-id="43">
-                <img src=".././images/leftup.png" alt="" class="leftTop">
-                <img src=".././images/leftup.png" alt="" class="rightTop">
-                <h2 class="orderTitle">车机离线状况</h2>
-                <div class="container">
-                    <div class="scroller scrolleroff">
-                        <div class="headLine">
-                            <p class="orderFive">日期</p>
-                            <p class="orderFive">城市</p>
-                            <p class="orderFive">车机离线数量</p>
-                        </div>
-                        <ul class="orderList offline"></ul>
-                    </div>
+        </section>
 
+        <!-- 车机离线表格 offline-table -->
+        <section class="section-box" section-id="43">
+            <div class="wrap offline-table clearTopGap">
+                <div class="cont-title">车机离线状况</div>
+                <div class="headLine">
+                    <p>日期</p>
+                    <p>城市</p>
+                    <p>车机离线数量</p>
                 </div>
-                <div class="page2 page">
-                    <div class="pre2 pre"> < </div>
-                    <div class="page-mid2 page-mid">
-                        <span class="now2 now">1</span>/<span class="totle2 totle"></span>
+                <ul class="itemVal offVal"></ul>
+
+                <div class="pagenation">
+                    <div class="page-pre off-prepage"> < </div>
+                    <div class="pages">
+                        <span class="nowpage off-nowpage">1</span>/<span class="allpage off-allpage">1</span>
                     </div>
-                    <div class="next2 next"> > </div>
+                    <div class="page-next off-nextpage"> > </div>
                 </div>
                 <div class="responsiblePerson-box">
-                    <p class="phoneBubble lxzk-phoneBubble"><a href=""></a></p>
+                    <p class="phoneBubble offline-phoneBubble"><a href=""></a></p>
                     <p class="responsiblePerson"></p>
-                </div>
-            </div>
-            <!--车辆停运详情-->
-            <div class="formCommon clearfix" style="display: none">
-                <h2 class="orderTitle">车辆停运详情</h2>
-                <div class="timeBorder" style="margin-bottom: 0;">
-                    开始<input type="text" id="appDateTime8" class="appDateTime1" onfocus="this.blur();" style="margin-right: 0.7rem;">
-                    结束<input type="text" id="appDateTime9" class="appDateTime1" onfocus="this.blur();">
-                </div>
-                <div class="container">
-                    <div class="scroller scrollerage">
-                        <div class="headLine">
-                            <p class="orderOne" >上报时间 </p>
-                            <p class="orderTwo">车牌号</p>
-                            <p class="orderThree">停运天数</p>
-                            <p class="orderFour">停车场</p>
-                            <p class="orderFive">现停网点</p>
-                            <p class="orderFive">维修网点</p>
-                            <p class="orderFive">问题</p>
-                            <p class="orderFive">上报原因</p>
-                        </div>
-                        <ul class="orderList outage">
-                            <li class="anlysis"></li>
-                        </ul>
-                    </div>
-
-                </div>
-                <div class="page2 page">
-                    <div class="pre2 pre"> < </div>
-                    <div class="page-mid2 page-mid">
-                        <span class="now2 now">1</span>/<span class="totle2 totle">1</span>
-                    </div>
-                    <div class="next2 next"> > </div>
                 </div>
             </div>
         </section>
     </div>
     <script src="../libs/echarts.min.js"></script>
     <script src="../js/cars/carsOption.js"></script>
-    <script src="../libs/china.js"></script>
-    <script src="../js/common/jsPublic.js?1"></script>
+    <script src="../js/common/jsPublic.js"></script>
     <script type="text/javascript" src='../js/cars/cars.js'></script>
     <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
     <script type="text/javascript" src='../js/common/biMonitor.js'></script>
