--- a/html/operation.html
+++ b/html/operation.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <title>驾驶舱-运营</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
-    <meta name="format-detection" content="telephone=yes">
-    <meta http-equiv="x-rim-auto-match" content="none">
-    <!--<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />-->
     <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/cssPublic.css">
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" href="../css/LArea.css">
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
-    <link rel="stylesheet" type="text/css" href="../css/slideBar.css">
     <link rel="stylesheet" type="text/css" href="../css/operation.css">
     <script src="//h5.shouqiev.com/libs/jquery.min.js"></script>
     <script src="../js/common/baseUrl.js"></script>
@@ -22,77 +18,13 @@
     <script src="../libs/LArea.js"></script>
     <script src="../libs/picker.js"></script>
 </head>
-<!--slideBar and slideBg start-->
-<div class="slideBarBg"></div>
-    <section class="slideBar clearfix">
-        <div class="nickName clearfix">
-            <div class="headIcon fl"></div>
-            <p class="nickName1 fl"></p>
-        </div>
-        <!--超出滚动-待定-->
-        <div class="slideCon">
-
-            <ul class="slideList">
-                <!--实时监控-->
-                <ul class="slideList">
-                    <!--实时监控-->
-                    <li class="list showWatching " data-menuId="2" data-value="charts.html">
-                        <span class="iconList"></span>
-                        <div class="type">实时监控</div>
-                    </li>
-                    <!--城市KPI考核-->
-                    <li class="list showKpi" data-menuId="3" data-value="kpis.html">
-                        <span class="iconList iconListKpi"></span>
-                        <div class="type">城市KPI考核</div>
-                    </li>
-                    <!--用户分析 car-user-->
-                    <li class="list showUser" data-menuId="4" data-value="car-user.html">
-                        <span class="iconList iconListUser"></span>
-                        <div class="type">用户分析</div>
-                    </li>
-                    <!--order-->
-                    <li class="list showOrders" data-menuId="5" data-value="orders.html">
-                        <span class="iconList iconListOrder"></span>
-                        <div class="type">订单分析</div>
-                    </li>
-                    <!--网点分析 site-->
-                    <li class="list showSite" data-menuId="6" data-value="site.html">
-                        <span class="iconList iconListSite"></span>
-                        <div class="type">网点分析</div>
-                    </li>
-                    <!--车辆分析 cars-->
-                    <li class="list showCars" data-menuId="7" data-value="cars.html">
-                        <span class="iconList iconListCars"></span>
-                        <div class="type">车辆分析</div>
-                    </li>
-                    <!--客服分析 新增 customer-service.html-->
-                    <li class="list showCustomer" data-menuId="8" data-value="customer-service.html">
-                        <span class="iconList iconListCustomer"></span>
-                        <div class="type">客服分析</div>
-                    </li>
-                    <!--运营分析==车资 car-fare-->
-                    <li class="list showFare active" data-menuId="9" data-value="operation.html">
-                        <span class="iconList iconListFare"></span>
-                        <div class="type">运营分析</div>
-                    </li>
-                    <!--营收分析 car-operation-->
-                    <li class="list showOperation" data-menuId="10" data-value="income.html">
-                        <span class="iconList iconListOperation"></span>
-                        <div class="type">营收分析</div>
-                    </li>
-            </ul>
-        </div>
-        <a href="../index.html" class="out">退出登陆</a>
-    </section>
-    <!--slideBar and slideBg end-->
+<body>
     <div class="box">
-        <!--header start -->
+        <!-- 导航栏 -->
         <header class="header clearfix">
             <div class="slideBtn"></div>
             <div class="logo"></div>
             <div class="location">
-                <!--<div class="showCity">北京-->
-                <!--</div>-->
                 <div class="content-block showCity">
                     <input id="demo3" type="text" readonly="" onfocus="this.blur();" />
                     <input id="value3" type="hidden" />
@@ -100,7 +32,6 @@
                 <div class="showCityIcon"></div>
             </div>
         </header>
-        <!--header end-->
 
         <!--保险/事故 accident-->
         <section class="section-box" section-id="53">
@@ -176,12 +107,12 @@
                     <p class="car-type pd-ct" data-type='2'>燃油车</p>
                 </div>
                 <div class="singleDatePicker">
-                    <div class="preDateBtn preDateBtn1">前一天</div>
+                    <div class="preDateBtn pd-predate">前一天</div>
                     <div class="showDate">
                         <input type="text" id="appDateTime1" class="appDateTime" onfocus="this.blur();">
                         <span class="showWeek1"></span>
                     </div>
-                    <div class="nextDateBtn nextDateBtn1">后一天</div>
+                    <div class="nextDateBtn pd-nextdate">后一天</div>
                 </div>
 
                 <div class="headLine">
@@ -248,7 +179,6 @@
   </div>
   <script src="../libs/echarts.min.js"></script>
   <script src="../js/common/jsPublic.js?1"></script>
-  <script src="../libs/china.js"></script>
   <script type="text/javascript" src='../js/operation/operation.js'></script>
   <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
   <script type="text/javascript" src='../js/common/biMonitor.js'></script>
